force-app/main/default/objects/Campaign/fields/DSALES_Tipodecapana__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tipodecapana__c</fullName>
    <description>Campo para especificar los tipo de campañas</description>
    <label>Tipo de capaña</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Informativo</fullName>
            </value>
            <value>
                <fullName>Seguro gratis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>