force-app/main/default/objects/Campaign/fields/dsalesPlazosAplicables__c.field-meta.xml
<CustomField>
    <fullName>dsalesPlazosAplicables__c</fullName>
    <label>Plazos aplicables</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>