force-app/main/default/objects/Campaign/fields/dsalesProductoCampanas__c.field-meta.xml
<CustomField>
    <fullName>dsalesProductoCampanas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto de campaña</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>