force-app/main/default/objects/Campaign/recordTypes/DSALES_TipoderegistrocampaNasSM.recordType-meta.xml
<RecordType>
    <fullName>DSALES_TipoderegistrocampaNasSM</fullName>
    <active>true</active>
    <label>Tipo de registro campañas SM</label>
</RecordType>